tests/integration/snapshots/integration__conformance__n_structure_unclosed_array_unfinished_true.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[ false, tru
stderr ---
error: unexpected character `t`. expected start of a json value
 --> stdin:1:10
  |
1 | [ false, tru
  |          ^
